# SoftAccelNPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_profiler.bat
docs/: HUGGINGFACE_GUIDE.md  architecture.md  benchmarks.md  llm_deployment_guide.md  project_structure.md  release_guide.md  usage.md
examples/: CMakeLists.txt  cache_compare.cpp  demo_gemm.cpp  extreme_bench.cpp  head_to_head.cpp  inference_bench.cpp  llama_bench.cpp  llama_inference.py  mobilenet_v2_bench.cpp  npu_profiler.cpp  production_model_load.cpp  real_world_transformer.cpp  verify_accuracy.cpp  verify_driver.cpp  verify_hybrid.cpp
include/softaccelnpu/: c_api.h  cache_model.h  device_manager.h  dml_api.h  gguf_loader.h  gpu_kernel.h  hardware_info.h  hybrid_scheduler.h  int4_kernel.h  kernels.h  npu_driver.h  opencl_kernel.h  ops.h  power_model.h  softaccelnpu.h  tensor.h  thread_pool.h  types.h
scripts/: llm_5b_tester.py  make_dummy_gguf.py  pysoftaccel.py
src/: CMakeLists.txt
src/core/: c_api.cpp  device_manager.cpp  dml_api.cpp  gguf_loader.cpp  logging.cpp  power_model.cpp  tensor.cpp
src/kernels/: avx2_gemm.cpp  int4_avx2.cpp  int4_utils.cpp  int8_gemm.cpp  internal_kernels.h  scalar_gemm.cpp
src/ops/: gemm_tiled.cpp  packing.cpp  sparsity_checker.cpp
src/runtime/: context.cpp  thread_pool.cpp
